# bike_gui_v2

./: .gitignore  platformio.ini
src/: button.h  consts.h  lcd.h  main.cpp  sensor.h  speed.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_HollowPoint.c  ui_font_HollowPoint22.c  ui_font_HollowPoint32.c
src/ui/images/: ui_img_battery_bg_png.c  ui_img_clk2_png.c  ui_img_compas_png.c  ui_img_devider_png.c  ui_img_gps_png.c  ui_img_guage_bg_1_png.c  ui_img_guage_bg_png.c  ui_img_guage_indicator_png.c  ui_img_left_arr_png.c  ui_img_light23_png.c  ui_img_range_bg_png.c  ui_img_range_knob_png.c  ui_img_temperature_png.c
src/ui/screens/: ui_Screen1.c
